Remove stale spellcheck markers at idle time

Blink's spellchecker used to remove stale/invalid markers
synchronously, which is time-costly. This patch greatly
simplifies the removal logic by integrate it with idle
time spell checker.

Detailed design and analysis: https://goo.gl/P7F710

BUG=705180
TEST=Existing layout tests under editing/spelling/

Review-Url: https://codereview.chromium.org/2785103005
Cr-Commit-Position: refs/heads/master@{#461968}

Former-commit-id: fd7ce52f21f9dd6c741ee0545cc109ed6267b95e